# diquark-analysis

./: README.md  pyproject.toml  run.sh
diquark/: analysis.py
diquark/config/: ATLAS_136_75_6j_5f.yaml  ATLAS_136_80_6j_5f.yaml  constants.py  default_settings.yaml
diquark/config/Classic_Analysis/: ATLAS_136_S70_B55_6j_5f.yaml  ATLAS_136_S75_B60_6j_5f.yaml  ATLAS_136_S80_B65_6j_5f.yaml  ATLAS_136_S85_B70_6j_5f.yaml  ATLAS_140_S70_B55_6j_5f.yaml  ATLAS_140_S75_B60_6j_5f.yaml  ATLAS_140_S80_B65_6j_5f.yaml  ATLAS_140_S85_B70_6j_5f.yaml
diquark/config/ML_Models_Comparison/: ATLAS_136_S75_B60_6j_1f_all3.yaml  CMS_136_S75_B60_6j_1f_all3.yaml
diquark/config/New_Features/: ATLAS_136_6500_32j_5f.yaml  ATLAS_136_6750_32j_5f.yaml  ATLAS_136_7000_32j_5f.yaml  ATLAS_136_7250_32j_5f.yaml  ATLAS_136_7500_10j_5f.yaml  ATLAS_136_7500_20j_5f.yaml  ATLAS_136_7500_32j_5f.yaml  ATLAS_136_7500_6j_5f.yaml  ATLAS_136_75_10j_5f.yaml  ATLAS_136_75_20j_5f.yaml  ATLAS_136_75_6j_5f.yaml  ATLAS_136_7750_32j_5f.yaml  ATLAS_136_8000_32j_5f.yaml  ATLAS_136_8250_32j_5f.yaml  ATLAS_136_S_70_20j_5f.yaml  ATLAS_136_S_75_20j_5f.yaml  ATLAS_136_S_80_20j_5f.yaml  ATLAS_136_S_85_20j_5f.yaml
diquark/config/Phase_Space_Dependency/: ATLAS_136_S75_B55_6j_5f.yaml  ATLAS_136_S75_B60_6j_5f.yaml  (+7 more)
diquark/data/: loader.py  preprocessor.py
diquark/evaluation/: metrics.py  visualizations.py
diquark/features/: feature_extractor.py
diquark/models/: gradient_boosting.py  neural_network.py
diquark/utils/: .gitignore  diquark_cross-sections_bkg_atlas.csv  parse_cross_sections.py
notebooks/: testing.ipynb
(+3 files in other folders)
