[tool.poetry]
name = "diquark"
version = "0.1.0"
description = ""
authors = ["Ioan-Mihail Dinu <ioan-mihail.dinu@cern.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13,<3.14"
pandas = "^2.3.1"
awkward = "^2.8.5"
tqdm = "^4.67.1"
uproot = "^5.6.3"
plotly = "^6.2.0"
scikit-learn = "^1.7.1"
joblib = "^1.5.1"
jupyter = "^1.1.1"
scipy = "^1.16.0"
#fastparquet = "^2023.10.1"
#pendulum = "^2.1.2"
#tensorflow = "^2.14.0"
kaleido = "^1.0.0"
#xgboost = "^2.0.3"
matplotlib = "^3.10.3"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[tool.black]
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
